package Classes;

public class test implements Comparable {
    @Override
    public int compareTo(Object o) {
        return 0;
    }
}
